Updated for config changes

--- a/MiraiConsultMVC/Views/Home/Home.cshtml
+++ b/MiraiConsultMVC/Views/Home/Home.cshtml
@@ -1,4 +1,8 @@
-﻿<div class="image-padding-left">
+﻿@{
+    Layout = "~/Views/Shared/_AskmiraiMasterLayout.cshtml";
+}
+
+<div class="image-padding-left">
     <img src="../Content/image/home.png" />
     <div class="container">
         <div class="ask-question-div row-fluid hidden-phone">
