Validation for forgot password is completed

--- a/MiraiConsultMVC/Views/User/ForgotPassword.cshtml
+++ b/MiraiConsultMVC/Views/User/ForgotPassword.cshtml
@@ -1,4 +1,7 @@
-﻿<script type="text/javascript" src="../Resources/js/bootstrap-dropdown.js"></script>
+﻿@model MiraiConsultMVC.Models.User.Login
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
 <div class="row-fluid ">
     <div class="span6 custom-center-small-div">
         <div class="row-fluid">
@@ -17,45 +20,49 @@
                             <label id="lblError">@ViewBag.Msg</label>
                         </div>
                     }
-                    @if (!String.IsNullOrEmpty(ViewBag.Msg) && ViewBag.success == "false") {
+                    @if (!String.IsNullOrEmpty(ViewBag.Msg) && ViewBag.success == "false")
+                    {
                         <div id="message" class="alert alert-error">
-                              <label id="lblError">@ViewBag.Msg</label>
-                               </div>
+                            <label id="lblError">@ViewBag.Msg</label>
+                        </div>
                     }
                 </div>
             </div>
-@using (Html.BeginForm("ForgotPassword", "User"))
-                    {
-            <div class="row-fluid">
-                <div class="span12">
-                    <div class="span8 pull-right btn-padding-left">
-                        <label class="ForgetPWtextalign" style="text-align: left">Enter Your Email Address</label>
+            @using (Html.BeginForm("ForgotPassword", "User", new { autocomplete = "off" }))
+            {
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true)
+                {
+                    <div class="row-fluid">
+                        <div class="span12">
+                            <div class="span8 pull-right btn-padding-left">
+                                <label class="ForgetPWtextalign" style="text-align: left">Enter Your Email Address</label>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <br />
-            <div class="row-fluid">
-                <div class="span12">
-                    <div class="span4 pull-left btn-padding-left">
-                        <label class="required">Email ID:</label>
+                    <br />
+                    <div class="row-fluid">
+                        <div class="span12">
+                            <div class="span4 pull-left btn-padding-left">
+                                <label class="required">Email ID:</label>
+                            </div>
+                            <div class="span8 pull-right btn-padding-left controls-right-padding">
+                                @Html.TextBoxFor(m => m.Email, new { @class = "input-block-level gray-border", maxlength = "50", placeholder = "Email ID" })<br />
+                                @Html.ValidationMessageFor(m => m.Email, string.Empty, new { @class = "validation-summary-errors" })
+                            </div>
+                        </div>
                     </div>
-                    <div class="span8 pull-right btn-padding-left controls-right-padding">
-                        @Html.TextBox("name", "", new { @class="input-block-level gray-border", type="email",  placeholder="Email ID"})
-                        @*<input id="txtEmail" class=" />*@
-                        <br />
+                    <br />
+                    <div class="row-fluid">
+                        <div class="span12">
+                            <div class="span8 pull-right btn-padding-left">
+                                <input id="btnSubmit" class="btn thanx" type="submit" value="Submit" />
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <br />
-            <div class="row-fluid">
-                <div class="span12">
-                    <div class="span8 pull-right btn-padding-left">
-                        <input id="btnSubmit" class="btn thanx" type="submit" value="Submit" />
-                    </div>
-                </div>
-            </div>
-            <br />
-}
+                    <br />
+                }
+            }
         </div>
     </div>
 </div>
@@ -68,8 +75,19 @@
         m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
     })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-    $(".input-block-level").keyup(function () {
-        Page_ClientValidate();
+    var tryNumber = 0;
+    jQuery('input[type=submit]').click(function (event) {
+        var self = $(this);
+
+        if (self.closest('form').valid()) {
+            if (tryNumber > 0) {
+                tryNumber++;
+                self.attr('disabled', true);
+            }
+            else {
+                tryNumber++;
+            }
+        };
     });
 
     ga('create', 'UA-48132984-2', 'askmirai.com');
