client side functionality is done for change password

--- a/MiraiConsultMVC/Views/User/ForgotPassword.cshtml
+++ b/MiraiConsultMVC/Views/User/ForgotPassword.cshtml
@@ -1,7 +1,5 @@
 ﻿@model MiraiConsultMVC.Models.User.Login
-<script src="~/Scripts/jquery.validate.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
-
+@Scripts.Render("~/bundles/jqueryval")
 <div class="row-fluid ">
     <div class="span6 custom-center-small-div">
         <div class="row-fluid">
