--- a/MiraiConsultMVC/Views/User/Changepassword.cshtml
+++ b/MiraiConsultMVC/Views/User/Changepassword.cshtml
@@ -10,6 +10,7 @@
         Layout = "~/Views/Shared/_PatientMasterLayout.cshtml";
     }
 }
+@Scripts.Render("~/bundles/jqueryval")
 <div class="row-fluid">
     <div class="span7 custom-center-small-div ">
         <div class='row-fluid'>
@@ -26,6 +27,12 @@
                     {
                         <div id="message" class="alert alert-error">
                             <label id="lblError">@ViewBag.errorMsg</label>
+                        </div>
+                    }
+                    @if (!String.IsNullOrEmpty(ViewBag.success))
+                    {
+                        <div id="message" class="alert alert-success"   >
+                            <label id="lblError">@ViewBag.success</label>
                         </div>
                     }
                 </div>
