--- a/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
@@ -107,10 +107,10 @@
                                     <label class="control-label cust-font-style">Date of Birth:</label>
                                     <div class="controls">
                                         <div class="input-append date" id="dob" data-date-format="dd/mm/yyyy" data-date-start-view="decade"
-                                             data-date-enddate="new Date()">
-                                            @Html.TextBoxFor(m => m.DateOfBirth, new { @class = "input-without-right-curve  date_box_width max-width txtdateOfBirth cust-no-datepicker-border cust-lightgreen", @style = "margin-top:0px;", placeholder = "Date Of Birth",id="txtDob" })
-                                            <label id="lblErrorDateOfBirth" style="color:red"></label>
+                                             data-date-enddate="new Date()" style="width: 65%">
+                                            @Html.TextBoxFor(m => m.DateOfBirth, new { @class = "input-without-right-curve  date_box_width max-width txtdateOfBirth cust-no-datepicker-border cust-lightgreen", @style = "margin-top:0px;", placeholder = "Date Of Birth", id = "txtDob" })
                                             <span class="add-on add-on-green  icon-with-right-curve"></span>
+                                            <label id="lblErrorDateOfBirth" style="color:red"></label>
                                         </div>
                                     </div>
                                 </div>
@@ -196,7 +196,7 @@
                 <div class="row-fluid">
                     <div class="span12 btn-margin-top profile-button" style="text-align: center">
                         <input type="submit" class="btn cust-button-radius cust-skyblue cust-uppercase cust-space-around cust-medium-button cust-font-style" id="btnSubmit" value="Save" onclick="if (!ValidateAllControl()) return false;" />
-                        <input type="reset" class="btn cust-button-radius cust-uppercase cust-red cust-space-around cust-medium-button cust-font-style" value="Reset" />
+                        <input type="reset" class="btn cust-button-radius cust-uppercase cust-red cust-space-around cust-medium-button cust-font-style" value="Reset" onclick="window.location.href = '/Doctors/DoctorProfile'" />
                     </div>
                 </div>
                 <div class="row-fluid">
@@ -989,6 +989,7 @@
                     else if (returndata == 1) {
                         alert('Degree already exist.');
                     }
+                    location.reload(true);
                 }
             });
         }
@@ -1021,6 +1022,7 @@
                 savedegree(docId, aData[1], selecteddegreeid, university);
                 saveRow(oTable, nEditing);
                 nEditing = null;
+                location.reload(true);
             }
             else {
                 /* No row currently being edited */
