'Submit' is changed to 'Search'

--- a/MiraiConsultMVC/Views/admin/Report.cshtml
+++ b/MiraiConsultMVC/Views/admin/Report.cshtml
@@ -65,7 +65,7 @@
             </div>
             <div class="row-fluid">
                 <div class="span12 div-left-padding">
-                    <input type="submit" class="btn thanx search_margin" value="submit">
+                    <input type="submit" class="btn thanx search_margin" value="Search">
                 </div>
             </div>
 }
